--- a/about.html
+++ b/about.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
     <title>About MDHL</title>
 </head>
 
 <main>
     <header>
-        <figure><img src="./LogoMightyducks.png" alt="LogoMightyducks" width="200" height="200"></figure>
+        <figure><img class="logo" src="./LogoMightyducks.png" alt="LogoMightyducks"></figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="./index.html">Home</a>
