--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Style1.css">
+    <!-- <link rel="stylesheet" href="Style2.css">
+    <link rel="stylesheet" href="Style3.css"> -->
+    <title>Contact</title>
 </head>
 <main>
     <header>
         <figure>
-            <img src="./LogoMightyducks.png" alt="LogoMightyducks" width="200" height="200">
+            <img class="logo" src="./LogoMightyducks.png" alt="LogoMightyducks">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
