--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <main>
     <header>
         <figure>
-            <img src="./LogoMightyducks.png" alt="LogoMightyDucks" width="200" height="200">
+            <img class="logo" src="./LogoMightyducks.png" alt="LogoMightyDucks">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
