--- a/about.html
+++ b/about.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="./assets/styles/Style1.css">
     <title>About MDHL</title>
 </head>
 
 <main>
     <header>
-        <figure><img class="logo" src="./LogoMightyducks.png" alt="LogoMightyducks"></figure>
+        <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyducks"></figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="./index.html">Home</a>
-            <a href="#">About MDHL</a>
+            <a href="#" class="Onsite">About MDHL</a>
             <a href="./contact.html">Contact</a>
         </nav>
+        <h2>About MDHL</h2>
     </header>
+    
     <article>
-        <figure><img src="./hockey2.jpg" alt="hockeyPicture" width="300" height="200"></figure>
         <h3>
             Mision</h3> 
         <p> To support young athletes living Chicago's northside neighborhood, who have an interest in 
