--- a/contact.html
+++ b/contact.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style1.css">
-    <link rel="stylesheet" href="Style2.css">
-    <link rel="stylesheet" href="Style3.css">
+    <link rel="stylesheet" href="./assets/styles/Style1.css">
     <title>Contact</title>
 </head>
+
 <main>
     <header>
-        <figure>
-            <img class="logo" src="./LogoMightyducks.png" alt="LogoMightyducks">
-        </figure>
+        <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyducks"></figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About MDHL</a>
-            <a href="#">Contact</a>
+            <a href="#" class="Onsite">Contact</a>
         </nav>
+        <h2>Contact</h2>
     </header>
-    <div>
-        <figure><img src="./hockey3.jpg" alt="hockeyPicture" width="300" height="200"></figure>
+    
+    <article>
         <p>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</p> 
-    </div>
+    </article>
 </main>
 </html>
