--- a/index.html
+++ b/index.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="./assets/styles/Style1.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <main>
     <header>
-        <figure>
-            <img class="logo" src="./LogoMightyducks.png" alt="LogoMightyDucks">
-        </figure>
+        <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
-            <a href="#">Home</a>
+            <a href="#" class="Onsite">Home</a>
             <a href="./about.html">About MDHL</a>
             <a href="./contact.html">Contact</a>
         </nav>
-    </header>
-    <article>
-        <figure><img src="./hockey1.jpg" alt="hockeyPicture" width="300" height="200"></figure>
         <h2>Upcoming Events</h2>
+    </header>
+    
+    <article>
         <h3>August 4</h3>
         <p>MDSL Fundraiser</p>
         <h3>August 16</h3>
@@ -31,4 +29,5 @@
         <p>First Game of the Season (Check Game Schedule for details)</p> 
     </article>
 </main>
+
 </html>
