--- a/about.html
+++ b/about.html
@@ -11,15 +11,16 @@
 <main>
     <header>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyducks"></figure>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="#" class="Onsite">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <h2>About MDHL</h2>
     </header>
     
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="#" class="Onsite">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
+
     <article>
         <h3>
             Mision</h3> 
@@ -37,5 +38,9 @@
             member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
             neighborhood. MDHL ran by o small full-ti</p> 
     </article>
+
+    <footer>
+        <p>creado por Agustin Muguruza</p> 
+    </footer>
 </main>
 </html>
