--- a/contact.html
+++ b/contact.html
@@ -11,17 +11,22 @@
 <main>
     <header>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyducks"></figure>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
+        <h1 class="titulo">Mighty Ducks Hockey League</h1>
+        <h2>Contact</h2>
+    </header>
+    
+<nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About MDHL</a>
             <a href="#" class="Onsite">Contact</a>
         </nav>
-        <h2>Contact</h2>
-    </header>
-    
+
     <article>
         <p>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</p> 
     </article>
+
+    <footer>
+        <p>creado por Agustin Muguruza</p> 
+    </footer>
 </main>
 </html>
