--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <main>
     <header>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="#" class="Onsite">Home</a>
-            <a href="./about.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <h2>Upcoming Events</h2>
     </header>
     
+    <nav>
+        <a href="#" class="Onsite">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
+
     <article>
         <h3>August 4</h3>
         <p>MDSL Fundraiser</p>
@@ -28,6 +29,10 @@
         <h3>September 1</h3>
         <p>First Game of the Season (Check Game Schedule for details)</p> 
     </article>
+
+    <footer>
+        <p>creado por Agustin Muguruza</p> 
+    </footer>
 </main>
 
 </html>
