--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <header>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
+        <figure><img class="imagenestilo2" src="./assets/img/design1_image2.jpg" alt="fotoHockey"></figure>
         <h2>Upcoming Events</h2>
     </header>
-    
+
     <nav>
         <a href="#" class="Onsite">Home</a>
         <a href="./about.html">About MDHL</a>
