--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/Style1.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
+    <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
+    <link rel="stylesheet" href="./assets/styles/Style3.css">
     <title>About MDHL</title>
 </head>
 
@@ -12,6 +14,7 @@
     <header>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyducks"></figure>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
+        <figure><img class="imagenestilo2" src="./assets/img/design1_image2.jpg" alt="fotoHockey"></figure>
         <h2>About MDHL</h2>
     </header>
     
