--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
+    <link rel="stylesheet" href="./assets/styles/Style1.css">
     <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
-    <link rel="stylesheet" href="./assets/styles/Style3.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>Contact</title>
 </head>
 
@@ -25,6 +25,7 @@
         </nav>
 
     <article>
+        <h3>Contact</h3>
         <p>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</p> 
     </article>
 
