--- a/rules.html
+++ b/rules.html
@@ -8,28 +8,22 @@
     <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
     <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
     <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
-    <title>Contact</title>
+    <title>Rules</title>
 </head>
-
 <main>
     <header>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
-        <h2>Contact</h2>
+        <h2 class="tab">Rules</h2>
     </header>
-    
+
     <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="#" class="Onsite">Contact</a>
+        <a href="./contact.html">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
-        <a href="./rules.html">Rules</a>
+        <a href="#" class="Onsite">Rules</a>
     </nav>
-
-    <article>
-        <h3>Contact</h3>
-        <p>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</p> 
-    </article>
 
     <footer>
         <p class>Task 3</p>
