--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/Style1.css">
+    <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
     <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
     <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>About MDHL</title>
@@ -12,9 +13,8 @@
 
 <main>
     <header>
-        <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyducks"></figure>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
-        <figure><img class="imagenestilo2" src="./assets/img/design1_image2.jpg" alt="fotoHockey"></figure>
+        <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
         <h2>About MDHL</h2>
     </header>
     
@@ -22,6 +22,8 @@
         <a href="./index.html">Home</a>
         <a href="#" class="Onsite">About MDHL</a>
         <a href="./contact.html">Contact</a>
+        <a href="./gameinformation.html">Game Information</a>
+        <a href="./rules.html">Rules</a>
     </nav>
 
     <article>
@@ -43,7 +45,8 @@
     </article>
 
     <footer>
-        <p>creado por Agustin Muguruza</p> 
+        <p class>Task 3</p>
+        <p class>creado por Agustin Muguruza</p> 
     </footer>
 </main>
 </html>
