--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
-    <link rel="stylesheet" href="./assets/styles/Style1.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
     <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
     <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
@@ -13,16 +13,17 @@
 
 <main>
     <header>
-        <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
-        <figure><img class="imagenestilo2" src="./assets/img/design1_image2.jpg" alt="fotoHockey"></figure>
-        <h2>Upcoming Events</h2>
+        <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
+        <h2 class="tab">Upcoming Events</h2>
     </header>
 
     <nav>
         <a href="#" class="Onsite">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
+        <a href="./gameinformation.html">Game Information</a>
+        <a href="./rules.html">Rules</a>
     </nav>
 
     <article>
@@ -35,7 +36,8 @@
     </article>
 
     <footer>
-        <p>creado por Agustin Muguruza</p> 
+        <p class>Task 3</p>
+        <p class>creado por Agustin Muguruza</p> 
     </footer>
 </main>
 
