--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <header>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
-        <h2>About MDHL</h2>
+        <h2 class="tab">About MDHL</h2>
     </header>
     
     <nav>
@@ -23,26 +23,25 @@
         <a href="#" class="Onsite">About MDHL</a>
         <a href="./contact.html">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
-        <a href="./rules.html">Rules</a>
+        <a href="./rules.html">Rules of Play & Policies</a>
     </nav>
 
-    <article>
-        <h3>
-            Mision</h3> 
-        <p> To support young athletes living Chicago's northside neighborhood, who have an interest in 
-            learning and playing soccer, with opportunities to learn and practice skills related to the game of 
-            hockey, specifically those skills around team cooperation and good sportsmanship</p> 
-        <h3>
-            Vision</h3> 
-        <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
-            through the building of character, self-discipline, and leadership.</p> 
-        <h3>
-            General Information</h3> 
-        <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
-            Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
-            member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
-            neighborhood. MDHL ran by o small full-ti</p> 
-    </article>
+    <section>
+        <dl>
+            <dt><h3>Mision</h3></dt>
+            <dd>To support young athletes living Chicago's northside neighborhood, who have an interest in 
+                learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, 
+                specifically those skills around team cooperation and good sportsmanship</dd>
+            <dt><h3>Vision</h3></dt>
+            <dd>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
+                through the building of character, self-discipline, and leadership.</dd>
+            <dt><h3>General Information</h3></dt>
+            <dd>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
+                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
+                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
+                neighborhood. MDHL ran by o small full-ti</dd>
+        </dl>
+    </section>
 
     <footer>
         <p class>Task 3</p>
