--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <header>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
-        <h2>Contact</h2>
+        <h2 class="tab">Contact</h2>
     </header>
     
     <nav>
@@ -23,13 +23,15 @@
         <a href="./about.html">About MDHL</a>
         <a href="#" class="Onsite">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
-        <a href="./rules.html">Rules</a>
+        <a href="./rules.html">Rules of Play & Policies</a>
     </nav>
 
-    <article>
-        <h3>Contact</h3>
-        <p>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</p> 
-    </article>
+    <section>
+        <ol>
+            <dt><h3>Contact</h3></dt>
+            <dd>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</dd>
+        </ol>
+    </section>
 
     <footer>
         <p class>Task 3</p>
