--- a/gameinformation.html
+++ b/gameinformation.html
@@ -22,9 +22,9 @@
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
         <a href="#" class="Onsite">Game Information</a>
-        <a href="./rules.html">Rules</a>
+        <a href="./rules.html">Rules of Play & Policies</a>
     </nav>
-
+    
     <footer>
         <p class>Task 3</p>
         <p class>creado por Agustin Muguruza</p> 
