--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
-    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
@@ -23,21 +20,22 @@
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
-        <a href="./rules.html">Rules</a>
+        <a href="./rules.html">Rules of Play & Policies</a>
     </nav>
 
-    <article>
-        <h3>August 4</h3>
-        <p>MDSL Fundraiser</p>
-        <h3>August 16</h3>
-        <p>Season Kick-off: Meet the Teams</p>
-        <h3>September 1</h3>
-        <p>First Game of the Season (Check Game Schedule for details)</p> 
-    </article>
+    <section>
+        <dl>
+            <dt><h3>August 4</h2></dt>
+            <dd>MDSL Fundraiser</dd>
+            <dt><h3>August 16</h3></dt>
+            <dd>Season Kick-off: Meet the Teams</dd>
+            <dt><h3>September 1</h3></dt>
+            <dd>First Game of the Season (Check Game Schedule for details)</dd>
+        </dl>
+    </section>
 
     <footer>
-        <p class>Task 3</p>
-        <p class>creado por Agustin Muguruza</p> 
+        <p class>Task 3</p><p class>creado por Agustin Muguruza</p> 
     </footer>
 </main>
 
