--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mighty Ducks Hockey League</title>
 </head>
 
-<main>
+<main class="pagina">
     <header>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
@@ -18,25 +18,24 @@
     <nav>
         <a href="#" class="Onsite">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
         <a href="./rules.html">Rules of Play & Policies</a>
+        <a href="./contact.html">Contact</a>
     </nav>
-
-    <section>
-        <dl>
-            <dt><h3>August 4</h2></dt>
-            <dd>MDSL Fundraiser</dd>
-            <dt><h3>August 16</h3></dt>
-            <dd>Season Kick-off: Meet the Teams</dd>
-            <dt><h3>September 1</h3></dt>
-            <dd>First Game of the Season (Check Game Schedule for details)</dd>
-        </dl>
+    
+    <section class="index">
+        <h3>August 4</h3>
+        <p>MDSL Fundraiser</p>
+        <h3>August 16</h3>
+        <p>Season Kick-off: Meet the Teams</p>
+        <h3>September 1</h3>
+        <p>First Game of the Season (Check Game Schedule for details)</p>
     </section>
-
-    <footer>
-        <p class>Task 3</p><p class>creado por Agustin Muguruza</p> 
-    </footer>
 </main>
+
+<footer>
+    <p>Task 3</p>
+    <p>creado por Agustin Muguruza</p>
+</footer>
 
 </html>
