--- a/about.html
+++ b/about.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
-    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>About MDHL</title>
 </head>
 
@@ -21,31 +18,42 @@
     <nav>
         <a href="./index.html">Home</a>
         <a href="#" class="Onsite">About MDHL</a>
-        <a href="./contact.html">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
         <a href="./rules.html">Rules of Play & Policies</a>
+        <a href="./contact.html">Contact</a>
     </nav>
 
-    <section>
-        <dl>
-            <dt><h3>Mision</h3></dt>
-            <dd>To support young athletes living Chicago's northside neighborhood, who have an interest in 
+    <section class="about">
+            <h3>
+                Mision
+            </h3>
+            <p>
+                To support young athletes living Chicago's northside neighborhood, who have an interest in 
                 learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, 
-                specifically those skills around team cooperation and good sportsmanship</dd>
-            <dt><h3>Vision</h3></dt>
-            <dd>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
-                through the building of character, self-discipline, and leadership.</dd>
-            <dt><h3>General Information</h3></dt>
-            <dd>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
+                specifically those skills around team cooperation and good sportsmanship
+            </p>
+            <h3>
+                Vision
+            </h3>
+            <p>
+                The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
+                through the building of character, self-discipline, and leadership.
+            </p>
+            <h3>
+                General Information
+            </h3>
+            <p>
+                The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
                 Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
                 member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
-                neighborhood. MDHL ran by o small full-ti</dd>
-        </dl>
+                neighborhood. MDHL ran by o small full-ti
+            </p>
     </section>
-
-    <footer>
-        <p class>Task 3</p>
-        <p class>creado por Agustin Muguruza</p> 
-    </footer>
 </main>
+
+<footer>
+    <p>Task 3</p>
+    <p>creado por Agustin Muguruza</p> 
+</footer>
+
 </html>
