--- a/rules.html
+++ b/rules.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
-    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
-    <title>RULES OF PLAY & POLICIES</title>
+    <title>Rules of Play & Policies</title>
 </head>
 <main>
     <header>
@@ -20,24 +17,24 @@
     <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
         <a href="#" class="Onsite">Rules of Play & Policies</a>
+        <a href="./contact.html">Contact</a>
     </nav>
 
-    <section>
-        <h2>SPORTSMANSHIP</h2>
+    <section class="rules">
+        <h3>SPORTSMANSHIP</h3>
         <p>The common interest that members of the Association share is to inspire
             youth to practice the ideals of sportsmanship and fair play. Any player, coach,
             team, parent, spectator, administrator or referee whose behavior detracts from
             this purpose is subject to disciplinary action regardless of technical hockey
             background, expertise, accomplishments or standing.</p>
-        <h2>IHF FIELD REGULATIONS</h2>
-            <ol>
-                <li>DIMENSIONS.IHF Law 1 provides for flexible external field dimensions within
+        <h3>IHF FIELD REGULATIONS</h3>
+            <ol class="list-regulations">
+                <li><span class="negrita">DIMENSIONS.IHF</span> Law 1 provides for flexible external field dimensions within
                     a given maximum and minimum width and length. These dimensions should be
                     adhered to for all fields used by teams under 12 and older.</li>
-                <li>COMPETITION FIELDS. Fields used within the competition program must be
+                <li><span class="negrita">COMPETITION FIELDS.</span> Fields used within the competition program must be
                     a minimum of 100 x 60 yards.Leagues, districts or associations participating in
                     the state competition program that are unable to provide a field that meets these
                     minimum requirements must advise the State Competition Board which will
@@ -45,8 +42,8 @@
                     whether or not a waiver of the minimum dimensions should be granted. Teams
                     from leagues, districts or associations that are unable to provide an acceptable
                     field may be required to play all their games away.</li>
-                <li>FIELDS USED BY YOUNG AGE GROUPS
-                    <ol>
+                <li><span class="negrita">FIELDS USED BY YOUNG AGE GROUPS</span>
+                    <ol class="list-letras">
                         <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                             for older age groups should be progressively larger.</li>
                         <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
@@ -56,19 +53,20 @@
                     </ol>
                 </li>    
             </ol>
-        <h2>ALL-PLAY</h2>
+        <h3>ALL-PLAY</h3>
         <p>All-play means that every recreation player on every team shall play atleast
             fifty percent of each game. Coaches in the competition program are encouraged
             to play their players 50% of each game.</p>
-        <ol><li>A Coach shall be permitted to not play a player 50% of each game
+        <ol class="list-allplay"><li>A Coach shall be permitted to not play a player 50% of each game
             under special circumstances, e.g., unexcused absences from practice
             and/or games, ungentlemanly conduct at practice and/or games, and
             injuries.</li></ol>
     </section>
-    
-    <footer>
-        <p class>Task 3</p>
-        <p class>creado por Agustin Muguruza</p> 
-    </footer>
 </main>
+
+<footer>
+    <p>Task 3</p>
+    <p>creado por Agustin Muguruza</p> 
+</footer>
+
 </html>
