--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
-    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>Contact</title>
 </head>
 
@@ -15,25 +12,28 @@
     <header>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
-        <h2>Contact</h2>
+        <h2 class="tab">Contact</h2>
     </header>
     
     <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="#" class="Onsite">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
-        <a href="./rules.html">Rules</a>
+        <a href="./rules.html">Rules of Play & Policies</a>
+        <a href="#" class="Onsite">Contact</a>
     </nav>
 
-    <article>
+    <section class="contact">
         <h3>Contact</h3>
-        <p>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</p> 
-    </article>
+            <p>Please email us at <a href="http://mdhl@chihockey.org">mdhl@chihockey.org</a> We reply to your email as soon as we can.</p>
+    </section>
 
-    <footer>
-        <p class>Task 3</p>
-        <p class>creado por Agustin Muguruza</p> 
-    </footer>
+    
 </main>
+
+<footer>
+    <p>Task 3</p>
+    <p>creado por Agustin Muguruza</p> 
+</footer>
+
 </html>
