--- a/gameinformation.html
+++ b/gameinformation.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
-    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>Game Information</title>
 </head>
 <main>
@@ -20,14 +17,86 @@
     <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
         <a href="#" class="Onsite">Game Information</a>
-        <a href="./rules.html">Rules</a>
+        <a href="./rules.html">Rules of Play & Policies</a>
+        <a href="./contact.html">Contact</a>
     </nav>
-
-    <footer>
-        <p class>Task 3</p>
-        <p class>creado por Agustin Muguruza</p> 
-    </footer>
+    
+    <section class="game-information">
+        <h3>Fall Schedule</h3>
+        <h4>* All games take place on Saturday</h4>
+        <table>
+            <thead>
+                <tr>
+                    <th>SEPTEMBER</th> 
+                    <th>Teams</th>
+                    <th>Location</th>
+                    <th>Times</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="2">9/01</td>
+                    <td>U1 and U4</td>
+                    <td>AJ Katzenmaier</td>
+                    <td>9:30 a.m.</td>
+                </tr>
+                <tr>
+                    <td>U3 and U2</td>
+                    <td>Greenbay</td>
+                    <td>1:00 p.m.</td>
+                </tr>
+                <tr>
+                    <td rowspan="2">9/08</td>
+                    <td>U5 and U6</td>
+                    <td>Howard A Yeeager</td>
+                    <td>9:30 a.m.</td>
+                </tr>
+                <tr>
+                    <td>U6 and U1</td>
+                    <td>Marjorie P Hart</td>
+                    <td>1:00p.m.</td>
+                </tr>
+                <tr>
+                    <td rowspan="2">9/15</td>
+                    <td>U2 and U4</td>
+                    <td>North</td>
+                    <td>9:30 p.m.</td>
+                </tr>
+                <tr>
+                    <td>U3 and U5</td>
+                    <td>AJ Katzenmaier</td>
+                    <td>1:00 p.m.</td>
+                </tr>
+                <tr>
+                    <td rowspan="2">9/22</td>
+                    <td>U1 and U3</td>
+                    <td>South</td>
+                    <td>9:30 a.m.</td>
+                </tr>
+                <tr>
+                    <td>U2 and U6</td>
+                    <td>Howard A Yeager</td>
+                    <td>1:00 p.m.</td>
+                </tr>
+                <tr>
+                    <td>9/29</td>
+                    <td>U4 and U5</td>
+                    <td>Greenbay</td>
+                    <td>9:30 a.m.</td>
+                </tr>
+            </tbody>
+        </table>
+        <p><span class="negrita">Facility Type:</span> Outdoor</p>
+        <p><span class="negrita">Additional Information:</span>  If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</p>
+        <p><span class="negrita">Please direct all questions to:</span>  Michael Randall, League Coordinator</p>
+        <div class="Contactos"><p><span class="negrita">Phone:</span> (630) 690-8132</p><p><span class="negrita">Email:</span>  michael.randall@chihockey.org</p></div>
+    </section>
 </main>
+
+<footer>
+    <p>Task 3</p>
+    <p>creado por Agustin Muguruza</p> 
+</footer>
+
 </html>
