--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
-    <!-- <link rel="stylesheet" href="./assets/styles/Style1.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style2.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/styles/Style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
-<main>
+<main class="pagina">
     <header>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
@@ -21,24 +18,26 @@
     <nav>
         <a href="#" class="Onsite">Home</a>
         <a href="./about.html">About MDHL</a>
+        <a href="./gameinformation.html">Game Information</a>
+        <a href="./rules.html">Rules of Play & Policies</a>
         <a href="./contact.html">Contact</a>
         <a href="./gameinformation.html">Game Information</a>
         <a href="./rules.html">Rules</a>
     </nav>
-
-    <article>
+    
+    <section class="index">
         <h3>August 4</h3>
         <p>MDSL Fundraiser</p>
         <h3>August 16</h3>
         <p>Season Kick-off: Meet the Teams</p>
         <h3>September 1</h3>
-        <p>First Game of the Season (Check Game Schedule for details)</p> 
-    </article>
-
-    <footer>
-        <p class>Task 3</p>
-        <p class>creado por Agustin Muguruza</p> 
-    </footer>
+        <p>First Game of the Season (Check Game Schedule for details)</p>
+    </section>
 </main>
+
+<footer>
+    <p>Task 3</p>
+    <p>creado por Agustin Muguruza</p>
+</footer>
 
 </html>
