--- a/gameinformation.html
+++ b/gameinformation.html
@@ -19,6 +19,7 @@
         <a href="./about.html">About MDHL</a>
         <a href="#" class="Onsite">Game Information</a>
         <a href="./rules.html">Rules of Play & Policies</a>
+        <a href="./Forms.html">Registration Form</a>
         <a href="./contact.html">Contact</a>
     </nav>
     
