--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="./about.html">About MDHL</a>
         <a href="./gameinformation.html">Game Information</a>
         <a href="./rules.html">Rules of Play & Policies</a>
+        <a href="./Forms.html">Registration Form</a>
         <a href="./contact.html">Contact</a>
     </nav>
     
