--- a/rules.html
+++ b/rules.html
@@ -19,6 +19,7 @@
         <a href="./about.html">About MDHL</a>
         <a href="./gameinformation.html">Game Information</a>
         <a href="#" class="Onsite">Rules of Play & Policies</a>
+        <a href="./Forms.html">Registration Form</a>
         <a href="./contact.html">Contact</a>
     </nav>
 
