--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
-<main class="pagina">
+<main>
     <header>
         <h1 class="titulo">Mighty Ducks Hockey League</h1>
         <figure><img class="logo" src="./assets/img/LogoMightyDucks.png" alt="LogoMightyDucks"></figure>
@@ -35,8 +35,8 @@
 </main>
 
 <footer>
-    <p>Task 3</p>
-    <p>creado por Agustin Muguruza</p>
+    <p>Task 4</p>
+    <p>creado por Agustin Muguruza</p> 
 </footer>
 
 </html>
