--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Rules of Play & Policies</title>
 </head>
 <main>
@@ -66,7 +66,7 @@
 </main>
 
 <footer>
-    <p>Task 3</p>
+    <p>Task 4</p>
     <p>creado por Agustin Muguruza</p> 
 </footer>
 
