--- a/gameinformation.html
+++ b/gameinformation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/StyleFlex.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Game Information</title>
 </head>
 <main>
@@ -61,7 +61,7 @@
                 <tr>
                     <td rowspan="2">9/15</td>
                     <td>U2 and U4</td>
-                    <td>North</td>
+                    <td>North Elementary School</td>
                     <td>9:30 p.m.</td>
                 </tr>
                 <tr>
@@ -72,7 +72,7 @@
                 <tr>
                     <td rowspan="2">9/22</td>
                     <td>U1 and U3</td>
-                    <td>South</td>
+                    <td>South Elementary School</td>
                     <td>9:30 a.m.</td>
                 </tr>
                 <tr>
@@ -88,6 +88,18 @@
                 </tr>
             </tbody>
         </table>
+        <iframe id="aj_katzenmaier_map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675801987736!5m2!1ses-419!2sar" width="100%" height="300rem" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <iframe id="greenbay_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23818.503327878596!2d-87.56811097549452!3d41.73534299577534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e280817973aed%3A0x50b8ef413dd6890d!2sGreen%20Bay%2C%20Chicago%2C%20Illinois%2060617%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1675802342755!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <iframe id="howard_a_yeeager_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d900650.4303967656!2d-88.40449001358829!3d42.14144901886682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675802404298!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <iframe id="marjorie_p_hart_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d188782.26321269537!2d-88.10936450958255!3d42.32710947244818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fecd0628e1bb5%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1675802472050!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <iframe id="north_elementary_school_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d188781.25137934962!2d-88.1093647968464!3d42.3274466419348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1675802937596!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <iframe id="sout_elementary_school_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d188780.2395481954!2d-88.10936508410866!3d42.32778380851262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sar!4v1675803424871!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
         <p><span class="negrita">Facility Type:</span> Outdoor</p>
         <p><span class="negrita">Additional Information:</span>  If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</p>
         <p><span class="negrita">Please direct all questions to:</span>  Michael Randall, League Coordinator</p>
@@ -96,7 +108,7 @@
 </main>
 
 <footer>
-    <p>Task 3</p>
+    <p>Task 4</p>
     <p>creado por Agustin Muguruza</p> 
 </footer>
 
